[package]
name = "gfontapi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
tokio = {version = "1.21.2", features = ["full"]}
