[package]
name = "gfontapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.11"
owo-colors = "4.2.0"
reqwest = { version = "0.12.12", features=["stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
subprocess = "0.2.9"
tokio = {version = "1.21.2", features = ["full"]}
